packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_bind__attr_modifier.snap
---
source: tests/vapor/v_bind.rs
expression: code
---
import { renderEffect as _renderEffect, setAttr as _setAttr, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _renderEffect(() => _setAttr(n0, "foo-bar", id));
  return n0;
})();
