packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_bind__attr_modifier_with_no_expression.snap
---
source: tests/vapor/v_bind.rs
expression: code
---
import { setAttr as _setAttr, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _setAttr(n0, "foo-bar", true);
  return n0;
})();
