packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_bind__camel_modifier.snap
---
source: tests/vapor/v_bind.rs
expression: code
---
import { renderEffect as _renderEffect, setProp as _setProp, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _renderEffect(() => _setProp(n0, "fooBar", id));
  return n0;
})();
