packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_bind__no_expression.snap
---
source: tests/vapor/v_bind.rs
expression: code
---
import { setProp as _setProp, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _setProp(n0, "id", true);
  return n0;
})();
