packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_bind__number_value.snap
---
source: tests/vapor/v_bind.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
import { template as _template } from "vue";
const t0 = _template("<div depth=\"0\"></div>");
(() => {
  const n1 = t0();
  const n3 = _createComponent(Comp, { depth: () => 0 });
  return [n1, n3];
})();
